# XCAlgo

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
benches/: xca_bench.rs
docs/: MATHEMATICAL_VERIFICATION.md
src/: lib.rs  main.rs
src/tda/: crypto.rs  graph.rs  hints.rs  homology.rs  mod.rs  noise.rs  padding.rs  path.rs  simd.rs
