[package]
name = "xcalgo"
version = "0.1.0"
edition = "2024"
description = "XCA: Topological Data Analysis Cryptosystem - Novel encryption based on graph homomorphisms and persistent homology"
license = "MIT"
repository = "https://github.com/rand0mdevel0per/XCAlgo"
homepage = "https://github.com/rand0mdevel0per/XCAlgo"
documentation = "https://github.com/rand0mdevel0per/XCAlgo/blob/master/README.md"
readme = "README.md"
keywords = ["cryptography", "tda", "topology", "graph", "post-quantum"]
categories = ["cryptography", "algorithms"]
authors = ["rand0mdevel0per"]

[dependencies]
sha2 = "0.10"
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
petgraph = "0.6"
zstd = "0.13"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "xca_bench"
harness = false
